--- a/deps/clib-package/package.json
+++ b/deps/clib-package/package.json
@@ -4,7 +4,7 @@
   "repo": "zyoung51/clib-package",
   "src": [
     "src/clib-package.h",
-    "src/clib-package.c"
+    "src/clib-package.cpp"
   ],
   "dependencies": {
     "list": "*",
@@ -17,7 +17,8 @@
     "strdup": "0.0.0",
     "stephenmathieson/parse-repo.c": "1.1.1",
     "logger": "0.0.1",
-    "stephenmathieson/debug.c": "0.0.0"
+    "stephenmathieson/debug.c": "0.0.0",
+    "zyoung51/semver.c": "0.2.0"
   },
   "development": {
     "stephenmathieson/describe.h": "2.0.1",
