--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
     "stephenmathieson/trim.c": "0.0.2",
     "which": "0.1.3",
     "stephenmathieson/str-flatten.c": "0.0.4",
-    "clib-package": "0.4.2",
+    "zyoung51/clib-package": "*",
     "commander": "1.3.2",
     "stephenmathieson/wiki-registry.c": "0.0.4",
     "stephenmathieson/case.c": "0.1.3",
     "jwerle/fs.c": "0.1.1",
-    "stephenmathieson/http-get.c": "0.1.1",
     "stephenmathieson/tempdir.c": "0.0.2",
     "stephenmathieson/str-replace.c": "0.0.6",
     "darthtrevino/str-concat": "0.0.2",
-    "strdup": "0.0.0",
     "Constellation/console-colors.c": "1.0.1",
     "littlstar/asprintf.c": "0.0.3",
     "logger": "0.0.1",
-    "clibs/parson": "1.0.2"
+    "clibs/parson": "1.0.2",
+    "zyoung51/http-get.c": "*"
   },
   "install": "make install"
 }
