--- a/deps/clib-package/package.json
+++ b/deps/clib-package/package.json
@@ -1,14 +1,14 @@
 {
   "name": "clib-package",
-  "version": "0.4.1",
-  "repo": "clibs/clib-package",
+  "version": "0.4.2",
+  "repo": "zyoung51/clib-package",
   "src": [
     "src/clib-package.h",
     "src/clib-package.c"
   ],
   "dependencies": {
     "list": "*",
-    "kgabis/parson": "*",
+    "clibs/parson": "1.0.2",
     "stephenmathieson/substr.c": "0.1.2",
     "stephenmathieson/http-get.c": "0.1.1",
     "stephenmathieson/mkdirp.c": "0.1.5",
